Adding modules that correspond with the classes in the Godot project.

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 			<svg id="scene" viewBox="0 0 1024 768"></svg>
 			<canvas id="metaballs" width="1024" height="768"></canvas>
 			<fade></fade>
+			<script type="module" src="js/game.js"></script>
 		</game>
 	</body>
 </html>
