--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 					aspect-ratio: 4 / 3;
 					border-radius: 1vmin;
 					overflow: hidden;
+					cursor: pointer;
 				}
 
 				game#fluid #scene {
