--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			<style type="text/css">
 				game#fluid {
 					position: relative;
-					width: 80vmin;
+					height: 90vh;
 					aspect-ratio: 4 / 3;
 					border-radius: 1vmin;
 					overflow: hidden;
