--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			<style type="text/css">
 				game#fluid {
 					position: relative;
-					height: 90vh;
+					width: 90vw;
 					aspect-ratio: 4 / 3;
 					border-radius: 1vmin;
 					overflow: hidden;
@@ -41,16 +41,11 @@
 					background: white;
 				}
 
-				game#fluid fade {
-					background: white;
-					transition: opacity 5s;
+				game#fluid #metaballs {
+					mix-blend-mode: multiply;
 				}
 
-				game#fluid fade.hidden {
-					opacity: 0;
-				}
-
-				game#fluid #scene, game#fluid #metaballs, game#fluid fade {
+				game#fluid #scene, game#fluid #metaballs {
 					position: absolute;
 					width: 100%;
 					height: 100%;
@@ -58,9 +53,8 @@
 			</style>
 			<svg id="scene" viewBox="-512 -384 1024 768"></svg>
 			<canvas id="metaballs" width="1024" height="768"></canvas>
-			<fade></fade>
-			<!-- <script src="lib/gl-matrix.js"></script> -->
-			<script src="lib/gl-matrix-min.js"></script>
+			<script src="lib/gl-matrix.js"></script>
+			<!-- <script src="lib/gl-matrix-min.js"></script> -->
 			<script type="module" src="js/game.js"></script>
 		</game>
 	</body>
