--- a/index.html
+++ b/index.html
@@ -39,10 +39,11 @@
 
 				game#fluid #scene {
 					background: white;
+					overflow: hidden;
 				}
 
 				game#fluid #metaballs {
-					mix-blend-mode: multiply;
+/*					mix-blend-mode: multiply;*/
 				}
 
 				game#fluid #scene, game#fluid #metaballs {
