Algae muck and fruit now properly animate, ripen and spread.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 				}
 
 				game#fluid #metaballs {
-/*					mix-blend-mode: multiply;*/
+					pointer-events: none;
 				}
 
 				game#fluid #scene, game#fluid #metaballs {
