Reordered children of nodes are now properly inserted in the render function. Algae and feeders are now in separate containers, and foragers cause their algae to move to the top of the display list.

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 			</style>
 			<svg id="scene" viewBox="-512 -384 1024 768"></svg>
 			<canvas id="metaballs" width="1024" height="768"></canvas>
-			<script src="lib/gl-matrix.js"></script>
-			<!-- <script src="lib/gl-matrix-min.js"></script> -->
+			<!-- <script src="lib/gl-matrix.js"></script> -->
+			<script src="lib/gl-matrix-min.js"></script>
 			<script type="module" src="js/game.js"></script>
 		</game>
 	</body>
