--- a/index.html
+++ b/index.html
@@ -47,14 +47,28 @@
 					pointer-events: none;
 				}
 
-				game#fluid #scene, game#fluid #metaballs {
+				game#fluid #scene, game#fluid #metaballs, game#fluid #splash {
 					position: absolute;
 					width: 100%;
 					height: 100%;
 				}
+
+				@keyframes fade-away {
+					from {
+						opacity: 1;
+					}
+					to {
+						opacity: 0;
+					}
+				}
+
+				game#fluid #splash {
+					animation: fade-away 2s cubic-bezier(0.11, 0, 0.5, 0) forwards 3s;
+				}
 			</style>
 			<svg id="scene" viewBox="-512 -384 1024 768"></svg>
 			<canvas id="metaballs" width="1024" height="768"></canvas>
+			<img id="splash" src="assets/svg/splash.svg">
 			<!-- <script src="lib/gl-matrix.js"></script> -->
 			<script src="lib/gl-matrix-min.js"></script>
 			<script type="module" src="js/game.js"></script>
