--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>Fluid, by gameLab — ported by Rezmason</title>
-		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
+		<meta
+			name="viewport"
+			content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"
+		/>
 		<style type="text/css">
 			html,
 			body {
@@ -47,7 +50,9 @@
 					pointer-events: none;
 				}
 
-				game#fluid #scene, game#fluid #metaballs, game#fluid #splash {
+				game#fluid #scene,
+				game#fluid #metaballs,
+				game#fluid #splash {
 					position: absolute;
 					width: 100%;
 					height: 100%;
@@ -70,7 +75,7 @@
 			</style>
 			<svg id="scene" viewBox="-512 -384 1024 768"></svg>
 			<canvas id="metaballs" width="1024" height="768"></canvas>
-			<img id="splash" src="assets/svg/splash.svg">
+			<img id="splash" src="assets/svg/splash.svg" />
 			<!-- <script src="lib/gl-matrix.js"></script> -->
 			<script src="lib/gl-matrix-min.js"></script>
 			<script type="module" src="js/game.js"></script>
