Adding sample MP3s and audio module. No playback functionality yet.

--- a/index.html
+++ b/index.html
@@ -72,6 +72,18 @@
 					user-select: none;
 					pointer-events: none;
 				}
+
+				instruments {
+					/*
+					position: absolute;
+					top: 0;
+					right: 0;
+					*/
+					background: blue;
+					padding: 1em;
+					height: 50vh;
+					overflow-y: scroll;
+				}
 			</style>
 			<svg id="scene" viewBox="-512 -384 1024 768"></svg>
 			<canvas id="metaballs" width="1024" height="768"></canvas>
@@ -80,5 +92,6 @@
 			<script src="lib/gl-matrix-min.js"></script>
 			<script type="module" src="js/game.js"></script>
 		</game>
+		<instruments></instruments>
 	</body>
 </html>
