Web audio modulation now works. Audio JSON is tuned to sound like emulated Beatnik notes.

--- a/index.html
+++ b/index.html
@@ -74,14 +74,15 @@
 				}
 
 				instruments {
-					/*
 					position: absolute;
-					top: 0;
-					right: 0;
-					*/
-					background: #222;
-					border: solid #222;
-					border-width: 2em 0 2em 5em;
+					bottom: -3in;
+					right: 2in;
+
+					cursor: move;
+
+					background: #800;
+					border: solid #800;
+					border-width: 5em 0 5em 10em;
 					border-radius: 0.5em;
 					height: 80vh;
 					overflow-y: scroll;
