Removing pointer events from instruments div and adding them to piano

--- a/index.html
+++ b/index.html
@@ -60,6 +60,10 @@
 					height: 100%;
 				}
 
+				game#fluid #instruments {
+					pointer-events: none;
+				}
+
 				@keyframes fade-away {
 					from {
 						opacity: 1;
