The game HTML's CSS now reports its orientation (which can differ from the screen orientation API's reported value). The audio module now takes this into account when specifying pan.

--- a/game.html
+++ b/game.html
@@ -40,6 +40,7 @@
 					cursor: pointer;
 					user-select: none;
 					-webkit-user-select: none;
+					--orientation: landscape;
 				}
 
 				game#fluid #scene {
@@ -81,6 +82,10 @@
 				}
 
 				@media (orientation: portrait) {
+					game#fluid {
+						--orientation: portrait;
+					}
+
 					game#fluid img#splash {
 						transform: rotate(-90deg);
 					}
