Switching muck to a metaball renderer.

--- a/game.html
+++ b/game.html
@@ -91,6 +91,7 @@
 					}
 				}
 			</style>
+			<canvas id="muck-metaballs" class="metaballs" width="1024" height="768"></canvas>
 			<svg id="scene" viewBox="-512 -384 1024 768"></svg>
 			<canvas id="feeder-metaballs" class="metaballs" width="1024" height="768"></canvas>
 			<img id="splash" src="assets/svg/splash.svg" />
