--- a/game.html
+++ b/game.html
@@ -31,6 +31,7 @@
 		<game id="fluid">
 			<style type="text/css">
 				game#fluid {
+					contain: content;
 					position: relative;
 					--aspect-ratio: calc(4 / 3);
 					height: calc(min(100vh, 100vw / var(--aspect-ratio)) - 4em);
