--- a/index.html
+++ b/index.html
@@ -26,15 +26,21 @@
 			}
 
 			iframe#fluid-frame {
+				flex: none;
 				border: none;
-				width: 100%;
-				height: 100%;
-				will-change: transform;
+				aspect-ratio: 4 / 3;
+				width: 100vw;
+				max-height: 100vh;
+				will-change: transform, width, height;
 				transition: transform 0.25s ease-in-out;
 			}
 
 			@media (orientation: portrait) {
 				iframe#fluid-frame {
+					width: unset;
+					max-height: unset;
+					aspect-ratio: 3 / 4;
+					height: calc(min(100vw * 4 / 3, 100vh) * 4 / 3);
 					transform: rotate(90deg);
 				}
 			}
